1.0-RC3